Finish drafting interstellar dust section

--- a/References/library-biblatex.bib
+++ b/References/library-biblatex.bib
@@ -86,7 +86,6 @@
   author = {Acheson, D. J.},
   date = {1991-06-01},
   journaltitle = {The Journal of the Acoustical Society of America},
-  shortjournal = {The Journal of the Acoustical Society of America},
   volume = {89},
   number = {6},
   pages = {3020--3020},
@@ -116,7 +115,6 @@
   author = {Allen, D. A. and Swings, J. P. and Harvey, P. M.},
   date = {1972},
   journaltitle = {Astronomy and Astrophysics},
-  shortjournal = {Astronomy and Astrophysics},
   volume = {20},
   pages = {333--336},
   issn = {0004-6361},
@@ -269,7 +267,6 @@
   author = {Beals, C. S.},
   date = {1934-12-01},
   journaltitle = {The Observatory},
-  shortjournal = {The Observatory},
   volume = {57},
   pages = {378--378},
   issn = {0029-7704},
@@ -283,8 +280,7 @@
   title = {The Origin and Fate of Volatile Elements on {{Earth}} Revisited in Light of Noble Gas Data Obtained from Comet {{67P}}/{{Churyumov-Gerasimenko}}},
   author = {Bekaert, David V. and Broadley, Michael W. and Marty, Bernard},
   date = {2020-04-02},
-  journaltitle = {Scientific Reports},
-  shortjournal = {Sci Rep},
+  journaltitle = {Sci Rep},
   volume = {10},
   number = {1},
   pages = {5796},
@@ -305,7 +301,6 @@
   author = {Berger, Marsha J and Oliger, Joseph},
   date = {1984-03-01},
   journaltitle = {Journal of Computational Physics},
-  shortjournal = {Journal of Computational Physics},
   volume = {53},
   number = {3},
   pages = {484--512},
@@ -323,7 +318,6 @@
   author = {Berger, M. J. and Colella, P.},
   date = {1989-05-01},
   journaltitle = {Journal of Computational Physics},
-  shortjournal = {Journal of Computational Physics},
   volume = {82},
   number = {1},
   pages = {64--84},
@@ -340,8 +334,7 @@
   title = {Energy {{Production}} in {{Stars}}},
   author = {Bethe, H. A.},
   date = {1939-03-01},
-  journaltitle = {Physical Review},
-  shortjournal = {Phys. Rev.},
+  journaltitle = {Phys. Rev.},
   volume = {55},
   number = {5},
   pages = {434--456},
@@ -356,8 +349,7 @@
   title = {Dust {{Evolution}} and the {{Formation}} of {{Planetesimals}}},
   author = {Birnstiel, T. and Fang, M. and Johansen, A.},
   date = {2016-12-01},
-  journaltitle = {Space Science Reviews},
-  shortjournal = {Space Sci Rev},
+  journaltitle = {Space Sci Rev},
   volume = {205},
   number = {1},
   pages = {41--75},
@@ -390,7 +382,6 @@
   author = {Bloot, S and Callingham, J R and Marcote, B},
   date = {2021-01-01},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {509},
   number = {1},
   pages = {475--488},
@@ -446,8 +437,7 @@
   shorttitle = {{{ENZO}}},
   author = {Bryan, Greg L. and Norman, Michael L. and O'Shea, Brian W. and Abel, Tom and Wise, John H. and Turk, Matthew J. and Reynolds, Daniel R. and Collins, David C. and Wang, Peng and Skillman, Samuel W. and Smith, Britton and Harkness, Robert P. and Bordner, James and Kim, Ji-hoon and Kuhlen, Michael and Xu, Hao and Goldbaum, Nathan and Hummels, Cameron and Kritsuk, Alexei G. and Tasker, Elizabeth and Skory, Stephen and Simpson, Christine M. and Hahn, Oliver and Oishi, Jeffrey S. and So, Geoffrey C. and Zhao, Fen and Cen, Renyue and Li, Yuan and {The Enzo Collaboration}},
   date = {2014-03-20},
-  journaltitle = {The Astrophysical Journal Supplement Series},
-  shortjournal = {ApJS},
+  journaltitle = {ApJS},
   volume = {211},
   number = {2},
   pages = {19},
@@ -483,8 +473,7 @@
   title = {Two {{Wolf}}\textendash{{Rayet}} Stars at the Heart of Colliding-Wind Binary {{Apep}}},
   author = {Callingham, J. R. and Crowther, P. A. and Williams, P. M. and Tuthill, P. G. and Han, Y. and Pope, B. J. S. and Marcote, B.},
   date = {2020-07-01},
-  journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Mon Not R Astron Soc},
+  journaltitle = {Mon Not R Astron Soc},
   volume = {495},
   number = {3},
   pages = {3323--3331},
@@ -557,7 +546,6 @@
   author = {Cherchneff, I. and Le Teuff, Y. H. and Williams, P. M. and Tielens, A. G. G. M.},
   date = {2000-05-01},
   journaltitle = {Astronomy and Astrophysics},
-  shortjournal = {Astronomy and Astrophysics},
   volume = {357},
   pages = {572--580},
   issn = {0004-6361},
@@ -629,8 +617,7 @@
   shorttitle = {Evolution of {{Wolf-Rayet}} Stars in Binary Systems},
   author = {Cherepashchuk, A. M. and Karetnikov, V. G.},
   date = {2003-01-01},
-  journaltitle = {Astronomy Reports},
-  shortjournal = {Astron. Rep.},
+  journaltitle = {Astron. Rep.},
   volume = {47},
   number = {1},
   pages = {38--58},
@@ -692,7 +679,6 @@
   author = {Colella, Phillip and Woodward, Paul R},
   date = {1984-04-01},
   journaltitle = {Journal of Computational Physics},
-  shortjournal = {Journal of Computational Physics},
   volume = {54},
   number = {1},
   pages = {174--201},
@@ -710,7 +696,6 @@
   author = {Crowther, Paul A.},
   date = {2003-07-01},
   journaltitle = {Astrophysics and Space Science},
-  shortjournal = {Astrophysics and Space Science},
   volume = {285},
   number = {3},
   pages = {677--685},
@@ -859,8 +844,7 @@
   title = {Measuring {{M Dwarf Winds}} with {{DAZ White Dwarfs}}},
   author = {Debes, John H.},
   date = {2006-11},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJ},
+  journaltitle = {ApJ},
   volume = {652},
   number = {1},
   pages = {636--642},
@@ -907,8 +891,7 @@
   title = {Abundances of [{{WC}}] {{Central Stars}} of {{PN}} and the {{Double Dust Chemistry Problem}}},
   author = {De Marco, Orsola},
   date = {2003},
-  journaltitle = {Symposium - International Astronomical Union},
-  shortjournal = {Symp. - Int. Astron. Union},
+  journaltitle = {Symp. - Int. Astron. Union},
   volume = {209},
   pages = {215--222},
   issn = {0074-1809},
@@ -986,7 +969,6 @@
   author = {Draine, B. T. and Salpeter, E. E.},
   date = {1979-07-01},
   journaltitle = {The Astrophysical Journal},
-  shortjournal = {The Astrophysical Journal},
   volume = {231},
   pages = {438--455},
   doi = {10.1086/157206},
@@ -1001,8 +983,7 @@
   title = {Infrared {{Emission}} from {{Interstellar Dust}}. {{I}}. {{Stochastic Heating}} of {{Small Grains}}},
   author = {Draine, B. T. and Li, Aigen},
   date = {2001-04-20},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJ},
+  journaltitle = {ApJ},
   volume = {551},
   number = {2},
   pages = {807},
@@ -1020,7 +1001,6 @@
   author = {Draine, B. T. and Salpeter, E. E.},
   date = {1979-07-01},
   journaltitle = {The Astrophysical Journal},
-  shortjournal = {The Astrophysical Journal},
   volume = {231},
   pages = {77--94},
   doi = {10.1086/157165},
@@ -1090,7 +1070,8 @@
   editoratype = {collaborator},
   isbn = {978-1-00-016313-1},
   langid = {english},
-  keywords = {Electronic books,Interstellar matter}
+  keywords = {Electronic books,Interstellar matter},
+  file = {/Users/py13je/Zotero/storage/L6B8H2AM/Dyson - 2021 - The physics of the interstellar medium.pdf}
 }
 
 @article{eichler_particle_1993,
@@ -1098,7 +1079,6 @@
   author = {Eichler, D. and Usov, V.},
   date = {1993-01-01},
   journaltitle = {The Astrophysical Journal},
-  shortjournal = {The Astrophysical Journal},
   volume = {402},
   pages = {271--279},
   issn = {0004-637X},
@@ -1115,7 +1095,6 @@
   author = {Eldridge, John J. and Fraser, Morgan and Smartt, Stephen J. and Maund, Justyn R. and Crockett, R. Mark},
   date = {2013-11-21},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {436},
   number = {1},
   pages = {774--795},
@@ -1131,8 +1110,7 @@
   title = {Self-Similar Jets},
   author = {Falle, S. a. E. G.},
   date = {1991-06-01},
-  journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Mon Not R Astron Soc},
+  journaltitle = {Mon Not R Astron Soc},
   volume = {250},
   number = {3},
   pages = {581--596},
@@ -1220,8 +1198,7 @@
   title = {Sudden {{Radiative Braking}} in {{Colliding Hot-Star Winds}}},
   author = {Gayley, K. G. and Owocki, S. P. and Cranmer, S. R.},
   date = {1997},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJ},
+  journaltitle = {ApJ},
   volume = {475},
   number = {2},
   pages = {786},
@@ -1239,7 +1216,6 @@
   author = {Gehrz, R. D. and Hackwell, J. A. and Jones, T. W.},
   date = {1974-08-01},
   journaltitle = {The Astrophysical Journal},
-  shortjournal = {The Astrophysical Journal},
   volume = {191},
   pages = {675--684},
   issn = {0004-637X},
@@ -1272,7 +1248,6 @@
   author = {Girard, T. and Willson, L. A.},
   date = {1987-09-01},
   journaltitle = {Astronomy and Astrophysics},
-  shortjournal = {Astronomy and Astrophysics},
   volume = {183},
   pages = {247--256},
   issn = {0004-6361},
@@ -1320,8 +1295,7 @@
   title = {Eine Differenzenmethode f\"ur die N\"aherungsberechnung unstetiger L\"osungen der hydrodynamischen Gleichungen},
   author = {Godunov, S. K.},
   date = {1959},
-  journaltitle = {Matematicheski\textbackslash u \i{} Sbornik. Novaya Seriya},
-  shortjournal = {Mat. Sb., Nov. Ser.},
+  journaltitle = {Mat. Sb., Nov. Ser.},
   volume = {47},
   pages = {271--306},
   publisher = {{Izdatel'stvo Nauka, Moskva}},
@@ -1338,8 +1312,7 @@
   title = {High {{Order Strong Stability Preserving Time Discretizations}}},
   author = {Gottlieb, Sigal and Ketcheson, David I. and Shu, Chi-Wang},
   date = {2009-03},
-  journaltitle = {Journal of Scientific Computing},
-  shortjournal = {J Sci Comput},
+  journaltitle = {J Sci Comput},
   volume = {38},
   number = {3},
   pages = {251--289},
@@ -1431,8 +1404,7 @@
   title = {The {{Galactic WN}} Stars - {{Spectral}} Analyses with Line-Blanketed Model Atmospheres versus Stellar Evolution Models with and without Rotation},
   author = {Hamann, W.-R. and Gr\"afener, G. and Liermann, A.},
   date = {2006-10-01},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {457},
   number = {3},
   pages = {1015--1031},
@@ -1487,7 +1459,6 @@
   author = {Harries, Tim J. and Monnier, John D. and Symington, Neil H. and Kurosawa, Ryuichi},
   date = {2004-05-01},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {350},
   number = {2},
   pages = {565--574},
@@ -1541,8 +1512,7 @@
   title = {Habitability of {{Planets Around Red Dwarf Stars}}},
   author = {Heath, Martin J. and Doyle, Laurance R. and Joshi, Manoj M. and Haberle, Robert M.},
   date = {1999-08-01},
-  journaltitle = {Origins of life and evolution of the biosphere},
-  shortjournal = {Orig Life Evol Biosph},
+  journaltitle = {Orig Life Evol Biosph},
   volume = {29},
   number = {4},
   pages = {405--424},
@@ -1772,8 +1742,7 @@
   title = {Galactic Distributions of Carbon- and Oxygen-Rich {{AGB}} Stars Revealed by the {{AKARI}} Mid-Infrared All-Sky Survey},
   author = {Ishihara, D. and Kaneda, H. and Onaka, T. and Ita, Y. and Matsuura, M. and Matsunaga, N.},
   date = {2011-10},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {534},
   pages = {A79},
   issn = {0004-6361, 1432-0746},
@@ -1847,12 +1816,26 @@
   file = {/Users/py13je/Zotero/storage/D5X3PJFI/Brickhouse - 2002 - Atomic Data Needs for X-ray Astronomy.pdf}
 }
 
+@article{kapteynAbsorptionLightSpace1909,
+  title = {On the {{Absorption}} of {{Light}} in {{Space}}},
+  author = {Kapteyn, J. C.},
+  date = {1909-01-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {29},
+  pages = {46},
+  issn = {0004-637X},
+  doi = {10.1086/141618},
+  url = {https://ui.adsabs.harvard.edu/abs/1909ApJ....29...46K},
+  urldate = {2022-02-14},
+  annotation = {ADS Bibcode: 1909ApJ....29...46K},
+  file = {/Users/py13je/Zotero/storage/TSKF3UQ5/Kapteyn - 1909 - On the Absorption of Light in Space.pdf}
+}
+
 @article{ketchesonRungeKuttaMethods2010,
   title = {Runge\textendash{{Kutta}} Methods with Minimum Storage Implementations},
   author = {Ketcheson, David I.},
   date = {2010-03-01},
   journaltitle = {Journal of Computational Physics},
-  shortjournal = {Journal of Computational Physics},
   volume = {229},
   number = {5},
   pages = {1763--1773},
@@ -1999,7 +1982,6 @@
   author = {Lamberts, A. and Dubus, G. and Lesur, G. and Fromang, S.},
   date = {2012-10-01},
   journaltitle = {Astronomy and Astrophysics},
-  shortjournal = {Astronomy and Astrophysics},
   volume = {546},
   pages = {A60},
   issn = {0004-6361},
@@ -2024,7 +2006,6 @@
   author = {Langer, N.},
   date = {1987-01-01},
   journaltitle = {Astronomy and Astrophysics},
-  shortjournal = {Astronomy and Astrophysics},
   volume = {171},
   pages = {L1-L4},
   issn = {0004-6361},
@@ -2040,8 +2021,7 @@
   shorttitle = {Stagnant {{Shells}} in the {{Vicinity}} of the {{Dusty Wolf}}?},
   author = {Lau, R. M. and Hankins, M. J. and Sch?del, R. and Sanchez-Bermudez, J. and Moffat, A. F. J. and Ressler, M. E.},
   date = {2017},
-  journaltitle = {The Astrophysical Journal Letters},
-  shortjournal = {ApJL},
+  journaltitle = {ApJL},
   volume = {835},
   number = {2},
   pages = {L31},
@@ -2058,8 +2038,7 @@
   title = {Revealing {{Efficient Dust Formation}} at {{Low Metallicity}} in {{Extragalactic Carbon-rich Wolf-Rayet Binaries}}},
   author = {Lau, Ryan M. and Hankins, Matthew J. and Kasliwal, Mansi M. and Bond, Howard E. and De, Kishalay and Jencson, Jacob E. and Moffat, Anthony F. J. and Smith, Nathan and Williams, Peredur M.},
   date = {2021-03},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJ},
+  journaltitle = {ApJ},
   volume = {909},
   number = {2},
   pages = {113},
@@ -2077,8 +2056,7 @@
   title = {Revisiting the {{Impact}} of {{Dust Production}} from {{Carbon-rich Wolf}}\textendash{{Rayet Binaries}}},
   author = {Lau, Ryan M. and Eldridge, J. J. and Hankins, Matthew J. and Lamberts, Astrid and Sakon, Itsuki and Williams, Peredur M.},
   date = {2020-07},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJ},
+  journaltitle = {ApJ},
   volume = {898},
   number = {1},
   pages = {74},
@@ -2300,7 +2278,6 @@
   author = {Marcote, B and Callingham, J R and De~Becker, M and Edwards, P G and Han, Y and Schulz, R and Stevens, J and Tuthill, P G},
   date = {2021-02-21},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {501},
   number = {2},
   pages = {2478--2486},
@@ -2342,7 +2319,6 @@
   author = {McClelland, L. A. S. and Eldridge, J. J.},
   date = {2016-06-21},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {459},
   number = {2},
   pages = {1505--1518},
@@ -2424,7 +2400,6 @@
   options = {useprefix=true},
   date = {2011-11-01},
   journaltitle = {The Astrophysical Journal Letters},
-  shortjournal = {The Astrophysical Journal Letters},
   volume = {742},
   pages = {L1},
   issn = {0004-637X},
@@ -2451,8 +2426,7 @@
   shorttitle = {The {{Keck Aperture-masking Experiment}}},
   author = {Monnier, J. D. and Tuthill, P. G. and Danchi, W. C. and Murphy, N. and Harries, T. J.},
   date = {2007-02-01},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJ},
+  journaltitle = {ApJ},
   volume = {655},
   number = {2},
   pages = {1033},
@@ -2468,8 +2442,7 @@
   title = {Pinwheel {{Nebula}} around {{WR}} 98a},
   author = {Monnier, J. D. and Tuthill, P. G. and Danchi, W. C.},
   date = {1999-10-08},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJ},
+  journaltitle = {ApJ},
   volume = {525},
   number = {2},
   pages = {L97},
@@ -2600,8 +2573,7 @@
   title = {A {{Changing Wind Collision}}},
   author = {Naz\'e, Ya\"el and Koenigsberger, Gloria and Pittard, Julian M. and Parkin, Elliot Ross and Rauw, Gregor and Corcoran, Michael F. and Hillier, D. John},
   date = {2018-02-02},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJ},
+  journaltitle = {ApJ},
   volume = {853},
   number = {2},
   pages = {164},
@@ -2737,8 +2709,7 @@
   shorttitle = {Line-Driven {{Stellar Winds}}},
   author = {Owocki, S. P. and Puls, J.},
   date = {1999-01-01},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJ},
+  journaltitle = {ApJ},
   volume = {510},
   number = {1},
   pages = {355},
@@ -2799,8 +2770,7 @@
   title = {Investigating the {{X-ray}} Emission from the Massive {{WR}}+{{O}} Binary {{WR}} 22 Using {{3D}} Hydrodynamical Models},
   author = {Parkin, E. R. and Gosset, E.},
   date = {2011-06},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {530},
   pages = {A119},
   issn = {0004-6361, 1432-0746},
@@ -2847,7 +2817,6 @@
   author = {Pierazzo, E. and Garcia, R. R. and Kinnison, D. E. and Marsh, D. R. and Lee-Taylor, J. and Crutzen, P. J.},
   date = {2010-11-01},
   journaltitle = {Earth and Planetary Science Letters},
-  shortjournal = {Earth and Planetary Science Letters},
   volume = {299},
   number = {3},
   pages = {263--272},
@@ -2866,7 +2835,6 @@
   author = {Pierazzo, E. and Garcia, R. R. and Kinnison, D. E. and Marsh, D. R. and Lee-Taylor, J. and Crutzen, P. J.},
   date = {2010-11-01},
   journaltitle = {Earth and Planetary Science Letters},
-  shortjournal = {Earth and Planetary Science Letters},
   volume = {299},
   number = {3},
   pages = {263--272},
@@ -2885,7 +2853,6 @@
   author = {Pierazzo, E. and Garcia, R. R. and Kinnison, D. E. and Marsh, D. R. and Lee-Taylor, J. and Crutzen, P. J.},
   date = {2010-11-01},
   journaltitle = {Earth and Planetary Science Letters},
-  shortjournal = {Earth and Planetary Science Letters},
   volume = {299},
   number = {3},
   pages = {263--272},
@@ -2904,7 +2871,6 @@
   author = {Pierazzo, E. and Garcia, R.R. and Kinnison, D.E. and Marsh, D.R. and Lee-Taylor, J. and Crutzen, P.J.},
   date = {2010-11-01},
   journaltitle = {Earth and Planetary Science Letters},
-  shortjournal = {Earth and Planetary Science Letters},
   volume = {299},
   number = {3-4},
   pages = {263--272},
@@ -3022,8 +2988,7 @@
   title = {Colliding Stellar Winds Structure and {{X-ray}} Emission},
   author = {Pittard, J. M. and Dawson, B.},
   date = {2018-07-11},
-  journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Mon Not R Astron Soc},
+  journaltitle = {Mon Not R Astron Soc},
   volume = {477},
   number = {4},
   pages = {5640--5645},
@@ -3109,8 +3074,7 @@
   title = {{{MPI-AMRVAC}} for {{Solar}} and {{Astrophysics}}},
   author = {Porth, O. and Xia, C. and Hendrix, T. and Moschou, S. P. and Keppens, R.},
   date = {2014-08-20},
-  journaltitle = {The Astrophysical Journal Supplement Series},
-  shortjournal = {ApJS},
+  journaltitle = {ApJS},
   volume = {214},
   number = {1},
   eprint = {1407.2052},
@@ -3156,7 +3120,6 @@
   author = {Prilutskii, O. F. and Usov, V. V.},
   date = {1976-02-01},
   journaltitle = {Soviet Astronomy},
-  shortjournal = {Soviet Astronomy},
   volume = {20},
   pages = {2},
   issn = {0038-5301},
@@ -3188,8 +3151,7 @@
   title = {Mass Loss from Hot Massive Stars},
   author = {Puls, Joachim and Vink, Jorick S. and Najarro, Francisco},
   date = {2008-12-01},
-  journaltitle = {The Astronomy and Astrophysics Review},
-  shortjournal = {Astron Astrophys Rev},
+  journaltitle = {Astron Astrophys Rev},
   volume = {16},
   number = {3},
   pages = {209--325},
@@ -3217,8 +3179,7 @@
   shorttitle = {{{HYPERION}}},
   author = {Robitaille, T. P.},
   date = {2011-12},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {536},
   pages = {A79},
   issn = {0004-6361, 1432-0746},
@@ -3234,8 +3195,7 @@
   title = {A {{Radio Pinwheel Emanating}} from {{WR}} 147},
   author = {Rodr\'iguez, Luis F. and Arthur, Jane and Montes, Gabriela and Carrasco-Gonz\'alez, Carlos and Toal\'a, Jes\'us A.},
   date = {2020-08},
-  journaltitle = {The Astrophysical Journal},
-  shortjournal = {ApJL},
+  journaltitle = {ApJL},
   volume = {900},
   number = {1},
   pages = {L3},
@@ -3262,7 +3222,6 @@
   author = {Rosslowe, C. K. and Crowther, P. A.},
   date = {2015-03-01},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {447},
   number = {3},
   pages = {2322--2347},
@@ -3386,8 +3345,7 @@
   shorttitle = {The {{Galactic WC}} Stars},
   author = {Sander, Andreas and Hamann, Wolf-Rainer and Todt, Helge},
   date = {2012-04},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {540},
   eprint = {1201.6354},
   eprinttype = {arxiv},
@@ -3470,8 +3428,7 @@
   title = {Atmosphere {{Impact Losses}}},
   author = {Schlichting, Hilke E. and Mukhopadhyay, Sujoy},
   date = {2018-01-23},
-  journaltitle = {Space Science Reviews},
-  shortjournal = {Space Sci Rev},
+  journaltitle = {Space Sci Rev},
   volume = {214},
   number = {1},
   pages = {34},
@@ -3488,8 +3445,7 @@
   title = {A {{New Radiative Cooling Curve Based}} on an {{Up-To-Date Plasma Emission Code}}},
   author = {Schure, K. M. and Kosenko, D. and Kaastra, J. S. and Keppens, R. and Vink, J.},
   date = {2009-12},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {508},
   number = {2},
   pages = {751--757},
@@ -3506,8 +3462,7 @@
   title = {The Effects of Stellar Winds on the Magnetospheres and Potential Habitability of Exoplanets},
   author = {See, V. and Jardine, M. and Vidotto, A. A. and Petit, P. and Marsden, S. C. and Jeffers, S. V. and do Nascimento, J. D.},
   date = {2014-10-01},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {570},
   pages = {A99},
   publisher = {{EDP Sciences}},
@@ -3542,8 +3497,7 @@
   shorttitle = {The {{Wolf}}\textendash{{Rayet}} Binaries of the Nitrogen Sequence in the {{Large Magellanic Cloud}}},
   author = {Shenar, T. and Sablowski, D. P. and Hainich, R. and Todt, H. and Moffat, A. F. J. and Oskinova, L. M. and Ramachandran, V. and Sana, H. and Sander, A. A. C. and Schnurr, O. and St-Louis, N. and Vanbeveren, D. and G\"otberg, Y. and Hamann, W.-R.},
   date = {2019-07},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {627},
   pages = {A151},
   issn = {0004-6361, 1432-0746},
@@ -3559,8 +3513,7 @@
   title = {{{SPHERE}} View of {{Wolf-Rayet}} 104 - {{Direct}} Detection of the {{Pinwheel}} and the Link with the Nearby Star},
   author = {Soulain, A. and Millour, F. and Lopez, B. and Matter, A. and Lagadec, E. and Carbillet, M. and Camera, A. La and Lamberts, A. and Langlois, M. and Milli, J. and Avenhaus, H. and Magnard, Y. and Roux, A. and Moulin, T. and Carle, M. and Sevin, A. and Martinez, P. and Abe, L. and Ramos, J.},
   date = {2018-10-01},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {618},
   pages = {A108},
   publisher = {{EDP Sciences}},
@@ -3577,8 +3530,7 @@
   title = {A {{New Class}} of {{Optimal High-Order Strong-Stability-Preserving Time Discretization Methods}}},
   author = {Spiteri, Raymond J. and Ruuth, Steven J.},
   date = {2002-01},
-  journaltitle = {SIAM Journal on Numerical Analysis},
-  shortjournal = {SIAM J. Numer. Anal.},
+  journaltitle = {SIAM J. Numer. Anal.},
   volume = {40},
   number = {2},
   pages = {469--491},
@@ -3591,9 +3543,9 @@
   file = {/Users/py13je/Zotero/storage/G3MXN8RW/Spiteri and Ruuth - 2002 - A New Class of Optimal High-Order Strong-Stability.pdf}
 }
 
-@book{spitzer_jr._physical_2008,
+@book{spitzerPhysicalProcessesInterstellar2008,
   title = {Physical {{Processes}} in the {{Interstellar Medium}}},
-  author = {Spitzer Jr., Lyman},
+  author = {Spitzer, Lyman},
   date = {2008-11-20},
   eprint = {vJEymITvabkC},
   eprinttype = {googlebooks},
@@ -3644,8 +3596,7 @@
   title = {{{3D}} Continuum Radiative Transfer in Complex Dust Configurations around Stellar Objects and Active Galactic Nuclei - {{I}}. {{Computational}} Methods and Capabilities},
   author = {Steinacker, J. and Henning, Th and Bacmann, A. and Semenov, D.},
   date = {2003-04-01},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {401},
   number = {2},
   pages = {405--418},
@@ -3665,7 +3616,6 @@
   author = {Stevens, Ian R. and Blondin, John M. and Pollock, A. M. T.},
   date = {1992-02-01},
   journaltitle = {The Astrophysical Journal},
-  shortjournal = {The Astrophysical Journal},
   volume = {386},
   pages = {265--287},
   issn = {0004-637X},
@@ -3681,8 +3631,7 @@
   title = {Stagnation-Point Flow in Colliding-Wind Binary Systems},
   author = {Stevens, I. R. and Pollock, A. M. T.},
   date = {1994-07-15},
-  journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Mon Not R Astron Soc},
+  journaltitle = {Mon Not R Astron Soc},
   volume = {269},
   number = {2},
   pages = {226--234},
@@ -3700,8 +3649,7 @@
   shorttitle = {The {{Athena}}++ {{Adaptive Mesh Refinement Framework}}},
   author = {Stone, James M. and Tomida, Kengo and White, Christopher J. and Felker, Kyle G.},
   date = {2020-06-26},
-  journaltitle = {The Astrophysical Journal Supplement Series},
-  shortjournal = {ApJS},
+  journaltitle = {ApJS},
   volume = {249},
   number = {1},
   eprint = {2005.06651},
@@ -3722,7 +3670,6 @@
   author = {Strickland, Russell and Blondin, John M.},
   date = {1995-08-01},
   journaltitle = {The Astrophysical Journal},
-  shortjournal = {The Astrophysical Journal},
   volume = {449},
   pages = {727},
   issn = {0004-637X},
@@ -3759,7 +3706,6 @@
   author = {Sumpter, R and Van~Loo, S},
   date = {2020-05-11},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {494},
   number = {2},
   pages = {2147--2157},
@@ -3854,7 +3800,6 @@
   author = {Thomas, Joshua D and Richardson, Noel D and Eldridge, J J and Schaefer, Gail H and Monnier, John D and Sana, Hugues and Moffat, Anthony F J and Williams, Peredur and Corcoran, Michael F and Stevens, Ian R and Weigelt, Gerd and Zainol, Farrah D and Anugu, Narsireddy and Le~Bouquin, Jean-Baptiste and {ten~Brummelaar}, Theo and Campos, Fran and Couperus, Andrew and Davies, Claire L and Ennis, Jacob and Eversberg, Thomas and Garde, Oliver and Gardner, Tyler and Fl\'o, Joan Guarro and Kraus, Stefan and Labdon, Aaron and Lanthermann, Cyprien and Leadbeater, Robin and Lester, T and Maki, Courtney and McBride, Brendan and Ozuyar, Dogus and Ribeiro, J and Setterholm, Benjamin and Stober, Berthold and Wood, Mackenna and Zurm\"uhl, Uwe},
   date = {2021-07-11},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {504},
   number = {4},
   pages = {5221--5230},
@@ -3954,7 +3899,6 @@
   author = {Toro, E. F. and Spruce, M. and Speares, W.},
   date = {1994-07-01},
   journaltitle = {Shock Waves},
-  shortjournal = {Shock Waves},
   volume = {4},
   number = {1},
   pages = {25--34},
@@ -3971,8 +3915,7 @@
   title = {An {{Exact Integration Scheme}} for {{Radiative Cooling}} in {{Hydrodynamical Simulations}}},
   author = {Townsend, R. H. D.},
   date = {2009-04-01},
-  journaltitle = {The Astrophysical Journal Supplement Series},
-  shortjournal = {ApJS},
+  journaltitle = {ApJS},
   volume = {181},
   number = {2},
   eprint = {0901.3146},
@@ -4078,7 +4021,6 @@
   options = {useprefix=true},
   date = {2001-02-01},
   journaltitle = {New Astronomy Reviews},
-  shortjournal = {New Astronomy Reviews},
   volume = {45},
   number = {3},
   pages = {135--232},
@@ -4114,7 +4056,6 @@
   options = {useprefix=true},
   date = {1979-07-01},
   journaltitle = {Journal of Computational Physics},
-  shortjournal = {Journal of Computational Physics},
   volume = {32},
   number = {1},
   pages = {101--136},
@@ -4226,8 +4167,7 @@
   title = {Magnetohydrodynamical Simulation of the Formation of Clumps and Filaments in Quiescent Diffuse Medium by Thermal Instability},
   author = {Wareing, C. J. and Pittard, J. M. and Falle, S. a. E. G. and Van Loo, S.},
   date = {2016-06-21},
-  journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Mon Not R Astron Soc},
+  journaltitle = {Mon Not R Astron Soc},
   volume = {459},
   number = {2},
   pages = {1803--1818},
@@ -4238,6 +4178,21 @@
   abstract = {Abstract.  We have used the adaptive mesh refinement hydrodynamic code, mg, to perform idealized 3D magnetohydrodynamical simulations of the formation of clumpy},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/CWSEAGSZ/Wareing et al. - 2016 - Magnetohydrodynamical simulation of the formation .pdf;/Users/py13je/Zotero/storage/YMCBPXYL/Wareing et al. - 2016 - Magnetohydrodynamical simulation of the formation .pdf;/Users/py13je/Zotero/storage/D5I7DXRJ/2594945.html}
+}
+
+@article{watsonAbundancesInterstellarMolecules1972,
+  title = {On the {{Abundances}} of {{Interstellar Molecules}}},
+  author = {Watson, W. D. and Salpeter, E. E.},
+  date = {1972-08-01},
+  journaltitle = {The Astrophysical Journal},
+  volume = {175},
+  pages = {659},
+  issn = {0004-637X},
+  doi = {10.1086/151587},
+  url = {https://ui.adsabs.harvard.edu/abs/1972ApJ...175..659W},
+  urldate = {2022-02-15},
+  abstract = {Equilibrium abundances are calculated for various molecules in interstellar H I gas clouds using rates from a previous paper for molecule formation on grain surfaces, and rates from other authors for gas-phase reactions and for photodissociation. Results depend on a parameter (n/100 H ) exp (2.5r ), where n is gas density and r is the visual optical depth from points inside the cloud to its surface. olecules probably are not depleted by condensation if {$<$} tO (hut the situation is uncertain if grains with ice mantles are present). For lightly shielded clouds ( {$<$} 10) where hydrogen is mainly atomic and carbon is mainly C+, the combined abundances of various molecules containing C, N, or 0 are estimated (relative to atomic C, N, and 0) to be 1O- . When exceeds some critical value 300, the neutral C in the gas eliminates photons beyond 11.3 eV; because of their high binding energy, CO molecules are then not dissociated and are expected to be almost as abundant as C atoms. Abundances (with even greater uncertainties) are also estimated for the more complex molecules.},
+  annotation = {ADS Bibcode: 1972ApJ...175..659W}
 }
 
 @book{weinbergLecturesAstrophysics2019,
@@ -4289,7 +4244,6 @@
   author = {Wiescher, Michael and Schatz, Hendrik},
   date = {2000-10-30},
   journaltitle = {Progress of Theoretical Physics Supplement},
-  shortjournal = {Progress of Theoretical Physics Supplement},
   volume = {140},
   pages = {11--32},
   issn = {0375-9687},
@@ -4307,7 +4261,6 @@
   options = {useprefix=true},
   date = {1990-11-01},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {247},
   pages = {18P},
   issn = {0035-8711},
@@ -4414,7 +4367,6 @@
   author = {Williams, Peredur M and Varricatt, Watson P and Chen\'e, Andr\'e-Nicolas and Corcoran, Michael F and Gull, Ted R and Hamaguchi, Kenji and Moffat, Anthony F J and Pollock, Andrew M T and Richardson, Noel D and Russell, Christopher M P and Sander, Andreas A C and Stevens, Ian R and Weigelt, Gerd},
   date = {2021-05-01},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {503},
   number = {1},
   pages = {643--659},
@@ -4464,7 +4416,6 @@
   options = {useprefix=true},
   date = {1987-08-01},
   journaltitle = {Astronomy and Astrophysics},
-  shortjournal = {Astronomy and Astrophysics},
   volume = {182},
   pages = {91--106},
   issn = {0004-6361},
@@ -4548,7 +4499,6 @@
   options = {useprefix=true},
   date = {2000-05-01},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {314},
   number = {1},
   pages = {23--32},
@@ -4566,7 +4516,6 @@
   author = {Williams, P M},
   date = {2019-09-01},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {488},
   number = {1},
   pages = {1282--1300},
@@ -4627,8 +4576,7 @@
   title = {Speckle Interferometry and Radiative Transfer Modelling of the {{Wolf-Rayet}} Star {{WR}} 118},
   author = {Yudin, B. and Balega, Y. and Bl\"ocker, T. and Hofmann, K.-H. and Schertl, D. and Weigelt, G.},
   date = {2001-11},
-  journaltitle = {Astronomy \& Astrophysics},
-  shortjournal = {A\&A},
+  journaltitle = {A\&A},
   volume = {379},
   number = {1},
   pages = {229--234},
@@ -4647,7 +4595,6 @@
   author = {Zhekov, Svetozar A and Gagn\'e, Marc and Skinner, Stephen L},
   date = {2022-02-11},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {510},
   number = {1},
   pages = {1278--1288},
@@ -4664,7 +4611,6 @@
   author = {Zhekov, Svetozar A. and Tomov, Toma and Gawronski, Marcin P. and Georgiev, Leonid N. and Borissova, Jura and Kurtev, Radostin and Gagn\'e, Marc and Hajduk, Marcin},
   date = {2014-12-01},
   journaltitle = {Monthly Notices of the Royal Astronomical Society},
-  shortjournal = {Monthly Notices of the Royal Astronomical Society},
   volume = {445},
   number = {2},
   pages = {1663--1678},
