--- a/References/library.bib
+++ b/References/library.bib
@@ -260,7 +260,7 @@
   author = {Bekaert, David V. and Broadley, Michael W. and Marty, Bernard},
   year = {2020},
   month = apr,
-  journal = {Scientific Reports},
+  journal = {Sci Rep},
   volume = {10},
   number = {1},
   pages = {5796},
@@ -311,7 +311,7 @@
   author = {Bethe, H. A.},
   year = {1939},
   month = mar,
-  journal = {Physical Review},
+  journal = {Phys. Rev.},
   volume = {55},
   number = {5},
   pages = {434--456},
@@ -325,7 +325,7 @@
   author = {Birnstiel, T. and Fang, M. and Johansen, A.},
   year = {2016},
   month = dec,
-  journal = {Space Science Reviews},
+  journal = {Space Sci Rev},
   volume = {205},
   number = {1},
   pages = {41--75},
@@ -408,7 +408,7 @@
   author = {Bryan, Greg L. and Norman, Michael L. and O'Shea, Brian W. and Abel, Tom and Wise, John H. and Turk, Matthew J. and Reynolds, Daniel R. and Collins, David C. and Wang, Peng and Skillman, Samuel W. and Smith, Britton and Harkness, Robert P. and Bordner, James and Kim, Ji-hoon and Kuhlen, Michael and Xu, Hao and Goldbaum, Nathan and Hummels, Cameron and Kritsuk, Alexei G. and Tasker, Elizabeth and Skory, Stephen and Simpson, Christine M. and Hahn, Oliver and Oishi, Jeffrey S. and So, Geoffrey C. and Zhao, Fen and Cen, Renyue and Li, Yuan and {The Enzo Collaboration}},
   year = {2014},
   month = mar,
-  journal = {The Astrophysical Journal Supplement Series},
+  journal = {ApJS},
   volume = {211},
   number = {2},
   pages = {19},
@@ -442,7 +442,7 @@
   author = {Callingham, J. R. and Crowther, P. A. and Williams, P. M. and Tuthill, P. G. and Han, Y. and Pope, B. J. S. and Marcote, B.},
   year = {2020},
   month = jul,
-  journal = {Monthly Notices of the Royal Astronomical Society},
+  journal = {Mon Not R Astron Soc},
   volume = {495},
   number = {3},
   pages = {3323--3331},
@@ -575,7 +575,7 @@
   author = {Cherepashchuk, A. M. and Karetnikov, V. G.},
   year = {2003},
   month = jan,
-  journal = {Astronomy Reports},
+  journal = {Astron. Rep.},
   volume = {47},
   number = {1},
   pages = {38--58},
@@ -790,7 +790,7 @@
   author = {Debes, John H.},
   year = {2006},
   month = nov,
-  journal = {The Astrophysical Journal},
+  journal = {ApJ},
   volume = {652},
   number = {1},
   pages = {636--642},
@@ -831,7 +831,7 @@
   title = {Abundances of [{{WC}}] {{Central Stars}} of {{PN}} and the {{Double Dust Chemistry Problem}}},
   author = {De Marco, Orsola},
   year = {2003},
-  journal = {Symposium - International Astronomical Union},
+  journal = {Symp. - Int. Astron. Union},
   volume = {209},
   pages = {215--222},
   issn = {0074-1809},
@@ -919,7 +919,7 @@
   author = {Draine, B. T. and Li, Aigen},
   year = {2001},
   month = apr,
-  journal = {The Astrophysical Journal},
+  journal = {ApJ},
   volume = {551},
   number = {2},
   pages = {807},
@@ -1000,7 +1000,8 @@
   collaborator = {Williams, David A.},
   isbn = {978-1-00-016313-1},
   langid = {english},
-  keywords = {Electronic books,Interstellar matter}
+  keywords = {Electronic books,Interstellar matter},
+  file = {/Users/py13je/Zotero/storage/L6B8H2AM/Dyson - 2021 - The physics of the interstellar medium.pdf}
 }
 
 @article{eichler_particle_1993,
@@ -1038,7 +1039,7 @@
   author = {Falle, S. a. E. G.},
   year = {1991},
   month = jun,
-  journal = {Monthly Notices of the Royal Astronomical Society},
+  journal = {Mon Not R Astron Soc},
   volume = {250},
   number = {3},
   pages = {581--596},
@@ -1121,7 +1122,7 @@
   title = {Sudden {{Radiative Braking}} in {{Colliding Hot-Star Winds}}},
   author = {Gayley, K. G. and Owocki, S. P. and Cranmer, S. R.},
   year = {1997},
-  journal = {The Astrophysical Journal},
+  journal = {ApJ},
   volume = {475},
   number = {2},
   pages = {786},
@@ -1212,7 +1213,7 @@
   title = {{Eine Differenzenmethode f\"ur die N\"aherungsberechnung unstetiger L\"osungen der hydrodynamischen Gleichungen}},
   author = {Godunov, S. K.},
   year = {1959},
-  journal = {Matematicheski\textbackslash u \i{} Sbornik. Novaya Seriya},
+  journal = {Mat. Sb., Nov. Ser.},
   volume = {47},
   pages = {271--306},
   publisher = {{Izdatel'stvo Nauka, Moskva}},
@@ -1228,7 +1229,7 @@
   author = {Gottlieb, Sigal and Ketcheson, David I. and Shu, Chi-Wang},
   year = {2009},
   month = mar,
-  journal = {Journal of Scientific Computing},
+  journal = {J Sci Comput},
   volume = {38},
   number = {3},
   pages = {251--289},
@@ -1316,7 +1317,7 @@
   author = {Hamann, W.-R. and Gr{\"a}fener, G. and Liermann, A.},
   year = {2006},
   month = oct,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {457},
   number = {3},
   pages = {1015--1031},
@@ -1418,7 +1419,7 @@
   author = {Heath, Martin J. and Doyle, Laurance R. and Joshi, Manoj M. and Haberle, Robert M.},
   year = {1999},
   month = aug,
-  journal = {Origins of life and evolution of the biosphere},
+  journal = {Orig Life Evol Biosph},
   volume = {29},
   number = {4},
   pages = {405--424},
@@ -1632,7 +1633,7 @@
   author = {Ishihara, D. and Kaneda, H. and Onaka, T. and Ita, Y. and Matsuura, M. and Matsunaga, N.},
   year = {2011},
   month = oct,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {534},
   pages = {A79},
   issn = {0004-6361, 1432-0746},
@@ -1697,6 +1698,20 @@
   abstract = {An overview is given of the current status of the spectral code development that takes place at SRON Utrecht.},
   keywords = {Applications Programs (Computers),Astronomical Models,Coronas,Energy Levels,Matrices (Mathematics),Plasmas (Physics),Software Development Tools,X Ray Spectra},
   file = {/Users/py13je/Zotero/storage/D5X3PJFI/Brickhouse - 2002 - Atomic Data Needs for X-ray Astronomy.pdf}
+}
+
+@article{kapteynAbsorptionLightSpace1909,
+  title = {On the {{Absorption}} of {{Light}} in {{Space}}},
+  author = {Kapteyn, J. C.},
+  year = {1909},
+  month = jan,
+  journal = {The Astrophysical Journal},
+  volume = {29},
+  pages = {46},
+  issn = {0004-637X},
+  doi = {10.1086/141618},
+  annotation = {ADS Bibcode: 1909ApJ....29...46K},
+  file = {/Users/py13je/Zotero/storage/TSKF3UQ5/Kapteyn - 1909 - On the Absorption of Light in Space.pdf}
 }
 
 @article{ketchesonRungeKuttaMethods2010,
@@ -1879,7 +1894,7 @@
   shorttitle = {Stagnant {{Shells}} in the {{Vicinity}} of the {{Dusty Wolf}}?},
   author = {Lau, R. M. and Hankins, M. J. and Sch?del, R. and {Sanchez-Bermudez}, J. and Moffat, A. F. J. and Ressler, M. E.},
   year = {2017},
-  journal = {The Astrophysical Journal Letters},
+  journal = {ApJL},
   volume = {835},
   number = {2},
   pages = {L31},
@@ -1895,7 +1910,7 @@
   author = {Lau, Ryan M. and Hankins, Matthew J. and Kasliwal, Mansi M. and Bond, Howard E. and De, Kishalay and Jencson, Jacob E. and Moffat, Anthony F. J. and Smith, Nathan and Williams, Peredur M.},
   year = {2021},
   month = mar,
-  journal = {The Astrophysical Journal},
+  journal = {ApJ},
   volume = {909},
   number = {2},
   pages = {113},
@@ -1912,7 +1927,7 @@
   author = {Lau, Ryan M. and Eldridge, J. J. and Hankins, Matthew J. and Lamberts, Astrid and Sakon, Itsuki and Williams, Peredur M.},
   year = {2020},
   month = jul,
-  journal = {The Astrophysical Journal},
+  journal = {ApJ},
   volume = {898},
   number = {1},
   pages = {74},
@@ -2259,7 +2274,7 @@
   author = {Monnier, J. D. and Tuthill, P. G. and Danchi, W. C. and Murphy, N. and Harries, T. J.},
   year = {2007},
   month = feb,
-  journal = {The Astrophysical Journal},
+  journal = {ApJ},
   volume = {655},
   number = {2},
   pages = {1033},
@@ -2274,7 +2289,7 @@
   author = {Monnier, J. D. and Tuthill, P. G. and Danchi, W. C.},
   year = {1999},
   month = oct,
-  journal = {The Astrophysical Journal},
+  journal = {ApJ},
   volume = {525},
   number = {2},
   pages = {L97},
@@ -2395,7 +2410,7 @@
   author = {Naz{\'e}, Ya{\"e}l and Koenigsberger, Gloria and Pittard, Julian M. and Parkin, Elliot Ross and Rauw, Gregor and Corcoran, Michael F. and Hillier, D. John},
   year = {2018},
   month = feb,
-  journal = {The Astrophysical Journal},
+  journal = {ApJ},
   volume = {853},
   number = {2},
   pages = {164},
@@ -2520,7 +2535,7 @@
   author = {Owocki, S. P. and Puls, J.},
   year = {1999},
   month = jan,
-  journal = {The Astrophysical Journal},
+  journal = {ApJ},
   volume = {510},
   number = {1},
   pages = {355},
@@ -2577,7 +2592,7 @@
   author = {Parkin, E. R. and Gosset, E.},
   year = {2011},
   month = jun,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {530},
   pages = {A119},
   issn = {0004-6361, 1432-0746},
@@ -2782,7 +2797,7 @@
   author = {Pittard, J. M. and Dawson, B.},
   year = {2018},
   month = jul,
-  journal = {Monthly Notices of the Royal Astronomical Society},
+  journal = {Mon Not R Astron Soc},
   volume = {477},
   number = {4},
   pages = {5640--5645},
@@ -2864,7 +2879,7 @@
   author = {Porth, O. and Xia, C. and Hendrix, T. and Moschou, S. P. and Keppens, R.},
   year = {2014},
   month = aug,
-  journal = {The Astrophysical Journal Supplement Series},
+  journal = {ApJS},
   volume = {214},
   number = {1},
   eprint = {1407.2052},
@@ -2939,7 +2954,7 @@
   author = {Puls, Joachim and Vink, Jorick S. and Najarro, Francisco},
   year = {2008},
   month = dec,
-  journal = {The Astronomy and Astrophysics Review},
+  journal = {Astron Astrophys Rev},
   volume = {16},
   number = {3},
   pages = {209--325},
@@ -2966,7 +2981,7 @@
   author = {Robitaille, T. P.},
   year = {2011},
   month = dec,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {536},
   pages = {A79},
   issn = {0004-6361, 1432-0746},
@@ -2981,7 +2996,7 @@
   author = {Rodr{\'i}guez, Luis F. and Arthur, Jane and Montes, Gabriela and {Carrasco-Gonz{\'a}lez}, Carlos and Toal{\'a}, Jes{\'u}s A.},
   year = {2020},
   month = aug,
-  journal = {The Astrophysical Journal},
+  journal = {ApJL},
   volume = {900},
   number = {1},
   pages = {L3},
@@ -3122,7 +3137,7 @@
   author = {Sander, Andreas and Hamann, Wolf-Rainer and Todt, Helge},
   year = {2012},
   month = apr,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {540},
   eprint = {1201.6354},
   eprinttype = {arxiv},
@@ -3198,7 +3213,7 @@
   author = {Schlichting, Hilke E. and Mukhopadhyay, Sujoy},
   year = {2018},
   month = jan,
-  journal = {Space Science Reviews},
+  journal = {Space Sci Rev},
   volume = {214},
   number = {1},
   pages = {34},
@@ -3214,7 +3229,7 @@
   author = {Schure, K. M. and Kosenko, D. and Kaastra, J. S. and Keppens, R. and Vink, J.},
   year = {2009},
   month = dec,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {508},
   number = {2},
   pages = {751--757},
@@ -3230,7 +3245,7 @@
   author = {See, V. and Jardine, M. and Vidotto, A. A. and Petit, P. and Marsden, S. C. and Jeffers, S. V. and do Nascimento, J. D.},
   year = {2014},
   month = oct,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {570},
   pages = {A99},
   publisher = {{EDP Sciences}},
@@ -3264,7 +3279,7 @@
   author = {Shenar, T. and Sablowski, D. P. and Hainich, R. and Todt, H. and Moffat, A. F. J. and Oskinova, L. M. and Ramachandran, V. and Sana, H. and Sander, A. A. C. and Schnurr, O. and {St-Louis}, N. and Vanbeveren, D. and G{\"o}tberg, Y. and Hamann, W.-R.},
   year = {2019},
   month = jul,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {627},
   pages = {A151},
   issn = {0004-6361, 1432-0746},
@@ -3279,7 +3294,7 @@
   author = {Soulain, A. and Millour, F. and Lopez, B. and Matter, A. and Lagadec, E. and Carbillet, M. and Camera, A. La and Lamberts, A. and Langlois, M. and Milli, J. and Avenhaus, H. and Magnard, Y. and Roux, A. and Moulin, T. and Carle, M. and Sevin, A. and Martinez, P. and Abe, L. and Ramos, J.},
   year = {2018},
   month = oct,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {618},
   pages = {A108},
   publisher = {{EDP Sciences}},
@@ -3296,7 +3311,7 @@
   author = {Spiteri, Raymond J. and Ruuth, Steven J.},
   year = {2002},
   month = jan,
-  journal = {SIAM Journal on Numerical Analysis},
+  journal = {SIAM J. Numer. Anal.},
   volume = {40},
   number = {2},
   pages = {469--491},
@@ -3307,9 +3322,9 @@
   file = {/Users/py13je/Zotero/storage/G3MXN8RW/Spiteri and Ruuth - 2002 - A New Class of Optimal High-Order Strong-Stability.pdf}
 }
 
-@book{spitzer_jr._physical_2008,
+@book{spitzerPhysicalProcessesInterstellar2008,
   title = {Physical {{Processes}} in the {{Interstellar Medium}}},
-  author = {Spitzer Jr., Lyman},
+  author = {Spitzer, Lyman},
   year = {2008},
   month = nov,
   publisher = {{John Wiley \& Sons}},
@@ -3358,7 +3373,7 @@
   author = {Steinacker, J. and Henning, Th and Bacmann, A. and Semenov, D.},
   year = {2003},
   month = apr,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {401},
   number = {2},
   pages = {405--418},
@@ -3391,7 +3406,7 @@
   author = {Stevens, I. R. and Pollock, A. M. T.},
   year = {1994},
   month = jul,
-  journal = {Monthly Notices of the Royal Astronomical Society},
+  journal = {Mon Not R Astron Soc},
   volume = {269},
   number = {2},
   pages = {226--234},
@@ -3408,7 +3423,7 @@
   author = {Stone, James M. and Tomida, Kengo and White, Christopher J. and Felker, Kyle G.},
   year = {2020},
   month = jun,
-  journal = {The Astrophysical Journal Supplement Series},
+  journal = {ApJS},
   volume = {249},
   number = {1},
   eprint = {2005.06651},
@@ -3656,7 +3671,7 @@
   author = {Townsend, R. H. D.},
   year = {2009},
   month = apr,
-  journal = {The Astrophysical Journal Supplement Series},
+  journal = {ApJS},
   volume = {181},
   number = {2},
   eprint = {0901.3146},
@@ -3886,7 +3901,7 @@
   author = {Wareing, C. J. and Pittard, J. M. and Falle, S. a. E. G. and Van Loo, S.},
   year = {2016},
   month = jun,
-  journal = {Monthly Notices of the Royal Astronomical Society},
+  journal = {Mon Not R Astron Soc},
   volume = {459},
   number = {2},
   pages = {1803--1818},
@@ -3895,6 +3910,20 @@
   abstract = {Abstract.  We have used the adaptive mesh refinement hydrodynamic code, mg, to perform idealized 3D magnetohydrodynamical simulations of the formation of clumpy},
   langid = {english},
   file = {/Users/py13je/Zotero/storage/CWSEAGSZ/Wareing et al. - 2016 - Magnetohydrodynamical simulation of the formation .pdf;/Users/py13je/Zotero/storage/YMCBPXYL/Wareing et al. - 2016 - Magnetohydrodynamical simulation of the formation .pdf;/Users/py13je/Zotero/storage/D5I7DXRJ/2594945.html}
+}
+
+@article{watsonAbundancesInterstellarMolecules1972,
+  title = {On the {{Abundances}} of {{Interstellar Molecules}}},
+  author = {Watson, W. D. and Salpeter, E. E.},
+  year = {1972},
+  month = aug,
+  journal = {The Astrophysical Journal},
+  volume = {175},
+  pages = {659},
+  issn = {0004-637X},
+  doi = {10.1086/151587},
+  abstract = {Equilibrium abundances are calculated for various molecules in interstellar H I gas clouds using rates from a previous paper for molecule formation on grain surfaces, and rates from other authors for gas-phase reactions and for photodissociation. Results depend on a parameter (n/100 H ) exp (2.5r ), where n is gas density and r is the visual optical depth from points inside the cloud to its surface. olecules probably are not depleted by condensation if {$<$} tO (hut the situation is uncertain if grains with ice mantles are present). For lightly shielded clouds ( {$<$} 10) where hydrogen is mainly atomic and carbon is mainly C+, the combined abundances of various molecules containing C, N, or 0 are estimated (relative to atomic C, N, and 0) to be 1O- . When exceeds some critical value 300, the neutral C in the gas eliminates photons beyond 11.3 eV; because of their high binding energy, CO molecules are then not dissociated and are expected to be almost as abundant as C atoms. Abundances (with even greater uncertainties) are also estimated for the more complex molecules.},
+  annotation = {ADS Bibcode: 1972ApJ...175..659W}
 }
 
 @book{weinbergLecturesAstrophysics2019,
@@ -4246,7 +4275,7 @@
   author = {Yudin, B. and Balega, Y. and Bl{\"o}cker, T. and Hofmann, K.-H. and Schertl, D. and Weigelt, G.},
   year = {2001},
   month = nov,
-  journal = {Astronomy \& Astrophysics},
+  journal = {A\&A},
   volume = {379},
   number = {1},
   pages = {229--234},
